// Copyright 2022 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.autoops;
option go_package = "github.com/bucketeer-io/bucketeer/proto/autoops";

import "proto/autoops/clause.proto";

message AutoOpsRule {
  string id = 1;
  string feature_id = 2;
  OpsType ops_type = 3;
  repeated Clause clauses = 4;
  int64 triggered_at = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
  bool deleted = 9;
}

enum OpsType {
  ENABLE_FEATURE = 0;
  DISABLE_FEATURE = 1;
}